--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="assets/angela_headshot.jpg" alt="Profile Picture">
+					<img class="profile-pic" src="assets/0471_Lattibeaudaire-FL Headshot.png" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -25,26 +25,26 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Angela Dalaq</p>
-					<p class="text-title-company">Licensed Agent</p>
-					<p class="text-title-company">Brightway, The Steve Trout Agency</p>
+					<p class="text-name">Paul Lattibeaudaire</p>
+					<p class="text-title-company">Agency Owner</p>
+					<p class="text-title-company">Brightway, The Lattibeaudaire Agency</p>
 				</div>
 				<div class="col">
-					<img src="assets/0090 Trout FL Lockup White.svg" alt="Company Logo">
+					<img src="assets/WhiteWeb0471Lattibe.svg" alt="Company Logo">
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="bg-color-blue secondary-info">
-		<a href="mailto:angela.dalaq@brightway.com">
+		<a href="mailto:paul.lattibeaudaire@brightway.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">angela.dalaq@brightway.com</p>
+						<p class="text-detail">paul.lattibeaudaire@brightway.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -73,14 +73,14 @@
 	</section>
 
 	<section class="bg-color-blue secondary-info">
-		<a href="https://www.BrightwayTrout.com">
+		<a href="https://www.BrightwayLattibeaudaire.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-website.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">BrightwayTrout.com</p>
+						<p class="text-detail">BrightwayLattibeaudaire.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -91,7 +91,7 @@
 	</section>
 
 	<section class="bg-color-blue secondary-info">
-		<a href="https://goo.gl/maps/LYQigbbTXvo2AWmV7">
+		<a href="https://goo.gl/maps/D9FLAam4zE6Gt4Ae6">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
@@ -114,7 +114,7 @@
 				<div class="col"></div>
 				<div class="col is-5">
 					<div class="button">
-						<a href="assets/Angela Dalaq.vcf">
+						<a href="assets/Paul Lattibeaudaire.vcf">
 							<p class="button">Download</p>
 						</a>
 					</div>
